--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.rg-galieva.com/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="https://cdn.rg-galieva.com/favicon/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="https://cdn.rg-galieva.com/favicon/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/tools/deploy_files/manifest.json">
     <link rel="mask-icon" href="https://cdn.rg-galieva.com/favicon/safari-pinned-tab.svg" color="#222">
     <meta name="theme-color" content="#fff">
 
